--- a/style.css
+++ b/style.css
@@ -171,3 +171,69 @@ display: block;
     width: 100%;
     background-color: white;
 }
+
+.section-sub-heading{
+    font-size: 130%;
+    color: gray;
+    font-weight: 300;
+    margin-bottom: 50px;
+    text-align: center;
+ }
+ .section-sub-heading::after{
+    display: block;
+    height:3px;
+    width: 100px;
+    content: "";
+    background-color: #eb9e2a ;
+    margin-top: 100px;
+    margin: 30px auto 0 auto;
+ }
+ .partners{
+    width: 100%;
+    background-color:#f4f4f4;
+    padding: 50px;
+ }
+
+ .img-container{
+     display: grid;
+     grid-template-columns: repeat(4,1fr);
+     grid-template-rows: repeat(2,1fr);
+     justify-content: center;
+     align-items: center;
+     gap: 30px;
+ }
+
+ .brand-img{
+    width: 65%;
+    height:auto;
+    margin-left:45px;
+ }
+ .trends{
+    width: 100vw;
+    background-color:#f4f4f4;
+    padding: 50px; 
+ }
+ .trends-header{
+    font-size: 200%;
+ }
+.product-container{
+    padding: 30px;
+    width: 100%;
+    height: 300px;
+    background-color: white;
+}
+.product-box{
+    display: flex;
+    flex-direction: column;
+    width: 400px;
+    text-decoration: none;
+    background-color: #ffff;
+    border-radius: 20px;
+    margin: 20px;
+    padding: 25px;
+    box-sizing: border-box;
+    box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.03);
+    border: 1px solid rgba(0, 0, 0, 0.08);;
+    overflow: hidden;
+    transition: all ease 0.3;
+}
